ajustes do modelo relacional

--- a/views/layouts/customer.ejs
+++ b/views/layouts/customer.ejs
@@ -16,9 +16,11 @@
       <!-- <div id="search-container"> -->
         <input id="search-field" onkeyup="openList() "type="text">
         <ul id="suggestion-list">
-          <% session.products.forEach(product => { %>
-            <li><a href= "/products/<%= product.id %>"><%= product.name %></a></li>
-          <% }) %>
+          <% if (session.products) {  %>
+            <% session.products.forEach(product => { %>
+              <li><a href= "/products/<%= product.id %>"><%= product.name %></a></li>
+            <% }) %>
+          <% } %>
         </ul>
       <!-- </div> -->
       
