--- a/views/merchant/login/index.ejs
+++ b/views/merchant/login/index.ejs
@@ -31,7 +31,7 @@
          <input type="submit" value="Entrar">
       </div>
       <div class="signup-link">
-      Não possui uma conta? <a href="#">Cadastre-se</a>
+      Não possui uma conta? <a href="/merchant/sign_up">Cadastre-se</a>
       </div>
    </form>
 </div>
